--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
-    "inquirer": "^9.2.0",
-    "node-fetch": "^3.3.1",
-     "type" : "module"
+    "inquirer": "^9.2.0"
+
   }
 }
